# Noticias_futbol_rag

./: .env  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
ingesta/: ingest.py
